
2022-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_stmt): refactored codegen for setting DEBUG-ITEM,
	  fixing SIGSEGV on USE FOR DEBUGGING with invalid BASED / LINKAGE items
	* codegen.c (output_debug_stmts): added to not write to the DEBUG-ITEM
	  when code was generated for USE ON DEBUGGING, but the runtime does
	  not have it enabled
	* codegen.c (output_perform_call): allow label end to be NULL if
	  there is no PERFORM THRU, adjusted callers to not pass duplicate labels
	* codegen.c (output_stmt): limit scope of some variables, allowing
	  them to be defined as const
	* parser.y (allocate_body): set target attribute for target identifier
	* parser.y (target_identifier): refactored to drop duplicate code
	* typeck.c (cb_build_move): don't set target attribute (duty of caller)
	* typeck.c (cb_emit_allocate_identifier): allow nonstandard
	  ALLOCATE linkage-item depending on cb_relaxed_syntax_checks

2022-09-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort_msg): use negative cb_source_line to reference
	  last known position during codegen
	* codegen.c (output_stmt): store source reference if generated
	  statement has one attached
	* codegen.c (output_standard_includes): fix bug #708 missing math
	  header inclusion if first program has no decimal
	* codegen.c (output_data, output_call): fix bug #855 CALL generation
	  when using figurative constants
	* codegen.c: correct use of CB_PREFIX_DECIMAL -> generated code now has
	  "d_" prefix instead of "d" in all places
	* cobc.h, tree.h: moved some function declarations
	* tree.c, tree.h (cb_literal_value), codegen.c, parser.y: moved double
	  and identical defined function literal_value to a single place
	* codegen.c, tree.h, cobc.c: renamed cb_init_codegen
	  to clear_local_codegen_vars
	* cobc.c: ask user for reporting reallocation memory issues

2022-09-26  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* error.c (cb_syntax_check, cb_syntax_check_x): add variants of